base/deployment.yaml
# base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 1
  template:
    metadata:
      name: api-server
    spec:
      containers:
        - name: nginx
          image: nginx
